# pr-agent-context

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codecov-yaml-validate.yml  pr-agent-context-refresh.yml  pr-agent-context.yml  pyproject-validate.yml  release-tags.yml
examples/: ci-producer.yml  coverage-matrix-producer.yml  pr-agent-context-refresh.yml  pr-agent-context-template.md
memory/: MEMORY.md
skills/comment-publishing/: SKILL.md
skills/downstream-integration/: SKILL.md
skills/pr-delivery/: SKILL.md
skills/prompt-template-evolution/: SKILL.md
skills/refresh-lifecycle/: SKILL.md
skills/release-flow/: SKILL.md
src/pr_agent_context/: __init__.py  __main__.py  cli.py  config.py  constants.py
src/pr_agent_context/coverage/: __init__.py  artifacts.py  combine.py  git_diff.py  patch.py
src/pr_agent_context/domain/: __init__.py  models.py
src/pr_agent_context/github/: __init__.py  api.py  comment_markers.py  failing_checks.py  issue_comments.py  pull_request_context.py  review_threads.py  workflow_jobs.py
src/pr_agent_context/prompt/: __init__.py  ids.py  line_wrap.py  render.py  template.py  truncate.py
src/pr_agent_context/services/: __init__.py  run.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_comment_markers.py  test_config.py  test_failing_checks.py  test_git_diff.py  test_github_api.py  test_issue_comments.py  test_main.py  test_patch_coverage.py  test_pull_request_context.py  test_render.py  test_review_threads.py  test_run_scoped_contract.py  test_run_service.py  test_version.py  test_workflow_contracts.py  test_workflow_jobs.py
tests/fixtures/coverage/: git_diff.patch
tests/fixtures/github/: check_runs.json  commit_status.json  (+4 more)
(+3 files in other folders)
