[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-agent-context"
version = "4.0.15"
description = "Reusable GitHub Actions tool for assembling PR handoff context for coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Shay Palachy" },
]
dependencies = [
  "coverage[toml]>=7,<8",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4,<5",
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.15,<0.16",
]

[project.scripts]
pr-agent-context = "pr_agent_context.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_agent_context"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
